<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <include layout="@layout/activity_toolbar"
...
        android:background="@drawable/btn_login"
        android:onClick="showStatistics"
        android:text="@string/statistics"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/btn_Settings"
        android:layout_width="160dp"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_login"
        android:onClick="showSettings"
        android:text="@string/settings"
...
